Fixes responsive content plus minor changes

--- a/_drafts/2019-07-29-titulo.md
+++ b/_drafts/2019-07-29-titulo.md
@@ -5,7 +5,7 @@ title: titulo
 
 ## post 2
 
-esto es el contenido del segundo post
+esto es el contenido del segundo postssssssssssssssssssssss sssssssssssssssssss s s
 
 onda <!-- qwe --> cagona la wea
 
